I added animation for portofolio page

--- a/portofolio.html
+++ b/portofolio.html
@@ -66,53 +66,184 @@
                     <li><button class="btn-item" type="button">Design</button></li>
                     <li><button class="btn-item" type="button">Marketing</button></li>
                 </ul>
-                <div class="our-projects">
-                    <div class="our-item"><img src="images/technoduck.jpg" alt="A laptop with a website" width="370">
-                        <h3 class="our-item__title">Technoduck</h3>
-                        <p class="our-item__subtitle">Web-site</p>
+                <section class="our-projects">
+
+                    <div>
+                        <!--1st card-->
+                        <div class="our-item">
+                            <div class="our-item foto"><img src="./images/technoduck.jpg" alt="A laptop with a website">
+                                <div class="overlay">
+                                    <p class="overlay-text"> Technoduck is a state-of-the-art coronavirus distribution
+                                        platform.
+                                        Companies
+                                        use
+                                        this
+                                        platform for digital espionage
+                                        and attacks on competitors' secure servers.</p>
+                                </div>
+
+                            </div>
+                            <div class="our-item description">
+                                <h3 class="our-item__title">Technoduck</h3>
+                                <p class="our-item__subtitle">Web-site</p>
+                            </div>
+
+
+                        </div>
+
                     </div>
-                    <div class="our-item"><img src="images/poster.jpg"
-                            alt="A design for a poster and two basketball players" width="370">
-                        <h3 class="our-item__title">Poster New Orlean vs Golden Star</h3>
-                        <p class="our-item__subtitle">Design</p>
-                    </div>
+                    <!--2nd card-->
                     <div class="our-item">
-                        <img src="images/seafod-restaurant.jpg" alt="An app for seafood restaurant" width="370">
-                        <h3 class="our-item__title">Seafood Restaurant</h3>
-                        <p class="our-item__subtitle">Apps</p>
+                        <div class="our-item foto">
+                            <img src="./images/poster.jpg" alt="A design for a poster and two basketball players">
+                            <div class="overlay">
+                                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution
+                                    platform.
+                                    Companies use
+                                    this
+                                    platform for digital espionage
+                                    and attacks on competitors' secure servers.</p>
+                            </div>
+                        </div>
+                        <div class="our-item description">
+                            <h3 class="our-item__title">Poster New Orlean vs Golden Star
+                            </h3>
+                            <p class="our-item__subtitle">Design</p>
+                        </div>
                     </div>
+                    <!--3rd card-->
                     <div class="our-item">
-                        <img src="images/project-prime.jpg" alt="A photo with headphones" width="370">
-                        <h3 class="our-item__title">Project Prime</h3>
-                        <p class="our-item__subtitle">Marketing</p>
+                        <div class="our-item foto"><img src="images/seafod-restaurant.jpg"
+                                alt="An app for seafood restaurant" width="370">
+                            <div class="overlay">
+                                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution
+                                    platform.
+                                    Companies use
+                                    this
+                                    platform for digital espionage
+                                    and attacks on competitors' secure servers.</p>
+                            </div>
+                        </div>
+                        <div class="our-item description">
+                            <h3 class="our-item__title">Seafood Restaurant</h3>
+                            <p class="our-item__subtitle">Apps</p>
+                        </div>
+
                     </div>
+                    <!--4th card-->
                     <div class="our-item">
-                        <img src="images/project-boxes.jpg" alt="A photo with two boxes" width="370">
-                        <h3 class="our-item__title">Project Boxes</h3>
-                        <p class="our-item__subtitle">Apps</p>
+                        <div class="our-item foto">
+                            <img src="images/project-prime.jpg" alt="A photo with headphones" width="370">
+                            <div class="overlay">
+                                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution
+                                    platform. Companies use
+                                    this
+                                    platform for digital espionage
+                                    and attacks on competitors' secure servers.</p>
+                            </div>
+                        </div>
+                        <div class="our-item description">
+                            <h3 class="our-item__title">Project Prime</h3>
+                            <p class="our-item__subtitle">Marketing</p>
+                        </div>
+
                     </div>
+                    <!--5th card-->
                     <div class="our-item">
-                        <img src="images/inspiration.jpg" alt="A pc with a web-site" width="370">
-                        <h3 class="our-item__title">Inspiration has no Borders</h3>
-                        <p class="our-item__subtitle">Web-site</p>
+                        <div class="our-item foto">
+                            <img src="images/project-boxes.jpg" alt="A photo with two boxes" width="370">
+                            <div class="overlay">
+                                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution
+                                    platform. Companies use
+                                    this
+                                    platform for digital espionage
+                                    and attacks on competitors' secure servers.</p>
+                            </div>
+                        </div>
+                        <div class="our-item description">
+                            <h3 class="our-item__title">Project Boxes</h3>
+                            <p class="our-item__subtitle">Apps</p>
+                        </div>
+
                     </div>
+                    <!--6th card-->
                     <div class="our-item">
-                        <img src="images/limited-edition.jpg" alt="A photo with a book design" width="370">
-                        <h3 class="our-item__title">Limited Edition</h3>
-                        <p class="our-item__subtitle">Design</p>
+                        <div class="our-item foto">
+                            <img src="images/inspiration.jpg" alt="A pc with a web-site" width="370">
+                            <div class="overlay">
+                                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution
+                                    platform. Companies use
+                                    this
+                                    platform for digital espionage
+                                    and attacks on competitors' secure servers.</p>
+                            </div>
+                        </div>
+                        <div class="our-item description">
+                            <h3 class="our-item__title">Inspiration has no Borders</h3>
+                            <p class="our-item__subtitle">Web-site</p>
+                        </div>
+
                     </div>
+                    <!--7th card-->
                     <div class="our-item">
-                        <img src="images/project-lab.jpg" alt="A photo with a lab project" width="370">
-                        <h3 class="our-item__title">Project LAB</h3>
-                        <p class="our-item__subtitle">Marketing</p>
+                        <div class="our-item foto">
+                            <img src="images/limited-edition.jpg" alt="A photo with a book design" width="370">
+                            <div class="overlay">
+                                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution
+                                    platform.
+                                    Companies use
+                                    this
+                                    platform for digital espionage
+                                    and attacks on competitors' secure servers.</p>
+                            </div>
+                        </div>
+                        <div class="our-item description">
+                            <h3 class="our-item__title">Limited Edition</h3>
+                            <p class="our-item__subtitle">Design</p>
+                        </div>
+
                     </div>
+                    <!--8th card-->
                     <div class="our-item">
-                        <img src="images/growing-business.jpg" alt="A laptop with an app" width="370">
-                        <h3 class="our-item__title">Growing Business</h3>
-                        <p class="our-item__subtitle">Apps</p>
+                        <div class="our-item foto">
+                            <img src="images/project-lab.jpg" alt="A photo with a lab project" width="370">
+                            <div class="overlay">
+                                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution
+                                    platform.
+                                    Companies use
+                                    this
+                                    platform for digital espionage
+                                    and attacks on competitors' secure servers.</p>
+                            </div>
+                        </div>
+                        <div class="our-item description">
+                            <h3 class="our-item__title">Project LAB</h3>
+                            <p class="our-item__subtitle">Marketing</p>
+                        </div>
+
                     </div>
-                </div>
+                    <!--9th card-->
+                    <div class="our-item">
+                        <div class="our-item foto">
+                            <img src="images/growing-business.jpg" alt="A laptop with an app" width="370">
+                            <div class="overlay">
+                                <p class="overlay-text">Technoduck is a state-of-the-art coronavirus distribution
+                                    platform.
+                                    Companies
+                                    use
+                                    this
+                                    platform for digital espionage
+                                    and attacks on competitors' secure servers.</p>
+                            </div>
+                        </div>
+                        <div class="our-item description">
+                            <h3 class="our-item__title">Growing Business</h3>
+                            <p class="our-item__subtitle">Apps</p>
+                        </div>
+                    </div>
+                </section>
             </div>
+
         </section>
     </main>
     <!--Footer section-->
