the latest changes

--- a/index.html
+++ b/index.html
@@ -26,10 +26,17 @@
         <nav class="nav-bar">
           <ul class="nav-list">
             <li>
-              <a href="index.html" class="nav-link">Studio</a>
+              <a href="index.html" class="nav-link border">
+                Studio
+              </a>
             </li>
-            <li><a href="portofolio.html" class="nav-link">Portofolio</a></li>
-            <li><a href="#contacts" class="nav-link">Contacts</a></li>
+            <li><a href="portofolio.html" class="nav-link">
+                Portofolio
+              </a>
+            </li>
+            <li><a href=" #contacts" class="nav-link">
+                Contacts
+              </a></li>
           </ul>
         </nav>
         <div class="contact-links">
