--- a/portofolio.html
+++ b/portofolio.html
@@ -27,9 +27,10 @@
                 <nav class="nav-bar">
                     <ul class="nav-list">
                         <li>
-                            <a href="index.html" class="nav-link">Studio</a>
+                            <a href="index.html" class="nav-link ">Studio</a>
                         </li>
-                        <li><a href="portofolio.html" class="nav-link">Portofolio</a></li>
+                        <li><a href="portofolio.html" class="nav-link border">Portofolio
+                            </a></li>
                         <li><a href="#contacts" class="nav-link">Contacts</a></li>
                     </ul>
                 </nav>
